basic data displayed in HTML

--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/css.css">
   <title>Weatherize</title>
 </head>
 
 <body>
   <h1>Weatherize</h1>
-  <div class="container" id="container"></div>
+  <div class="container" id="container">
+    <h3 id="location"></h3>
+    <h2 id="temperature"></h2>
+    <h3 id="sky"></h3>
+  </div>
 
   <script src="./config.js" type="text/javascript"></script>
   <script src="./script/script.js" type="text/javascript"></script>
